--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,127 @@
-.App {
+body {
+  font-size: 25px;
+  font-family: "the", sans-serif;
+  background-color: #f7f7f7;
+  margin: 3px;
+  padding: 10px;
+}
+
+.box__layout {
+  margin: 20px;
+  padding: 20px;
+  background-color: #ffffff;
+  border-radius: 8px;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+}
+
+.box__layout a{
+  text-decoration: none;
+}
+
+.center{
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.title,
+.date,
+.inline,
+.feelings,
+.content {
+  margin-bottom: 15px;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.input-style,
+select,
+button {
+  padding: 8px;
+  font-size: 16px;
+  border-radius: 4px;
+  border: 1px solid #ddd;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+.input-style {
+  width: 98%;
 }
 
-.App-link {
-  color: #61dafb;
+.inline label {
+  margin-right: 10px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.feelings label {
+  margin-right: 15px;
+}
+
+.btn button {
+  background-color: #ff8c00;
+  color: #fff;
+  cursor: pointer;
+}
+
+.btn button:hover {
+  background-color: #e07b00;
+}
+
+.delete button{
+  cursor: pointer;
+}
+
+.delete button:hover {
+  background-color: #dddddd;
+}
+
+.list2 {
+  margin-bottom: 20px;
+  padding: 10px;
+  background-color: #fff;
+  border-radius: 8px;
+  box-shadow: 0 0 5px rgba(0, 0, 0, 0.1);
+}
+
+h1 {
+  color: #ff8c00;
+}
+.date input {
+  width: 98%;
+  padding: 8px;
+  font-size: 16px;
+  border-radius: 4px;
+  border: 1px solid #ddd;
+}
+@font-face {
+  font-family: "the";
+  src: url("./THE.ttf");
+}
+
+.modal {
+  background-color: rgb(255, 224, 167);
+  border-radius: 30px;
+  text-align: center;
+  padding-bottom: 10px;
+}
+
+.modal-content button{
+  cursor: pointer;
+}
+
+.modal-content button:hover{
+  background-color: #dddddd;
+}
+
+.delete{
+  text-align: right;
+  margin: 10px;
+}
+
+.write{
+  border-bottom: 1px solid gray;
+  margin: 10px;
+}
+
+.write h2{
+  cursor: pointer;
+}
+
+.box__layout span{
+  margin: 10px;
+  background-color: rgb(255, 224, 167);
 }
